# cli-modplayer

./: CMakeLists.txt
include/: file_browser_ui.hpp  playlist.hpp  simple_ui.hpp  ui.hpp
src/: file_browser_ui.cpp  main.cpp  player.cpp  playlist.cpp  simple_ui.cpp  ui.cpp
